Added prototype audio button

--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dictionary Extension</title>
+    <title>QuickDefine</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Dictionary</h1>
+    <h1 style="text-align: center;">QuickDefine</h1>
     <input type="text" id="wordInput" placeholder="Enter a word">
     <button id="searchButton">Search</button>
     <div id="result">
-        <h3 id="word"></h3>
+        <h3 id="word" ></h3>
+        <button id="audioPlayer">Audio</button>
         <p id="phonetic"></p>
         <p id="definition"></p>
     </div>
