--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,15 @@
 <head>
     <title>QuickDefine</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <h1 style="text-align: center;">QuickDefine</h1>
     <input type="text" id="wordInput" placeholder="Enter a word">
     <button id="searchButton">Search</button>
     <div id="result">
-        <h3 id="word" ></h3>
-        <button id="audioPlayer">Audio</button>
+        <a href="" target="_blank"><h3 id="word" ></h3></a>
+        <i id="audioPlayer" class="fas fa-volume-up icon-btn"></i>
         <p id="phonetic"></p>
         <p id="definition"></p>
     </div>
